--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "BETEL ESPOIR"
-logo: img/esp.jpg
+logo: image/esp.jpg
 description : " Portfolio Support IT - Data Scientist"
 show_downloads: true
 theme: jekyll-theme-minimal
