--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "BETEL ESPOIR"
 logo: image/esp.jpg
-description : " Portfolio Support IT - Data Scientist"
+description : " Software Security - Data Scientist - IA"
 show_downloads: true
 theme: jekyll-theme-minimal
 langues: fr
